--- a/look-core/css/default.css.template
+++ b/look-core/css/default.css.template
@@ -2,13 +2,14 @@
 ** Bootstrap over-rides
 */
 html, body {
-  height: 100%;
+  /*height: 100%;*/
 }
 
 body {
   display: flex;
   height: 100%;
   flex-direction: column;
+	min-height: 100vh;
 }
 .page-content {
   flex: 1 0 auto;
@@ -16,7 +17,21 @@ body {
 footer {
   flex-shrink: 0;
 }
-
+.homepage-blog-posts .post-image-container img {
+    height: 226px;
+}
+.product-items.productList .product-item .img a,
+.product-items.productList .product-item .img img{
+    position: initial;
+}
+.product-items.productList .product-item .img {
+    border: 1px solid #ececec;
+}
+@media (max-width: 991px){
+.product-items.productList .product-item .img {
+    width: 32%;
+}
+}
 body {
     /*font-family: Arial,Helvetica Neue,Helvetica,sans-serif;*/
 	font-family: Arial,Helvetica Neue,Helvetica,sans-serif;
