--- a/look-core/css/default.css.template
+++ b/look-core/css/default.css.template
@@ -1,15 +1,16 @@
 /*
 ** Bootstrap over-rides
 */
-html, body {
-  /*height: 100%;*/
-}
-
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,700&display=swap');
 body {
   display: flex;
   height: 100%;
   flex-direction: column;
 	min-height: 100vh;
+}
+.antiCls { 
+    visibility: hidden; 
 }
 #skip a
 {
@@ -533,7 +534,7 @@ ul.extrapages li a {
     float: right;
     margin-bottom: 25px;
 }
-.mailist-box h3 {
+.mailist-box h2 {
     margin: 0 0 15px;
 	font-family: Arial,Helvetica Neue,Helvetica,sans-serif;
     font-size: 18px;
@@ -642,7 +643,7 @@ ul.social-icons li.social-icons-label {
         margin: 20px auto;
     }
 }
-.social-icons h3 {
+.social-icons h2 {
     margin: 0 0 15px;
 	font-family: Arial,Helvetica Neue,Helvetica,sans-serif;
     font-size: 18px;
